CRUDS usuarios,expedientes y login listos

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
             <img src="../static/images/logo.svg" alt="" class="mb-4" style="height:auto; width:25vh">
         </div>
 
-        <form action="/hola" method="POST">
+        <form action="/login" method="POST">
 
             <div class="row" >
                 
@@ -30,10 +30,10 @@
                 <div class="border border-top-0 rounded-bottom border-2 border-gray-900 border-1 w-100" style="width: 32vh; background-color: white;">
                     <div class="">
                         <div class="input-group my-4">
-                            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="RFC" style="font-family: inria sans;">
+                            <input name="txtRFC" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="RFC" style="font-family: inria sans;">
                         </div>
                         <div class="input-group my-4">
-                            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Contraseña" style="font-family: inria sans;">
+                            <input name="txtPass" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Contraseña" style="font-family: inria sans;">
                         </div>
                         
                         <div class="flex-column text-center mb-3">
