--- a/templates/modales/opcionesExpediente.html
+++ b/templates/modales/opcionesExpediente.html
@@ -1,23 +1,15 @@
-{% extends 'app.html'%}
 
-{% block content %}
-
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#CrearReceta">
-        Agregar Expediente
-    </button>
-    
-    <!-- Modal -->
-    <div class="modal fade" id="CrearReceta" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <!-- Modal Editar Expediente -->
+    <div class="modal fade" id="EditarExpediente{{ex[0]}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content border-dark border-top-0 border-2">
 
-                <form action="">
+                <form action="/editarExpediente" method="POST">
 
                     <div class="" style="background-color: rgb(60, 141, 188); height:1vh;  border-radius:1vh 1vh 0vh 0vh"></div>
     
                     <div class="modal-header justify-content-center border-dark border-top-0 border-2">
-                        <h1 style="font-family: inria sans;" class="modal-title fs-5" id="staticBackdropLabel">Crear Receta</h1>
+                        <h1 style="font-family: inria sans;" class="modal-title fs-5" id="staticBackdropLabel">Editar Expediente</h1>
                     </div>
 
                     <div class="modal-body border-dark border-top-0 border-2">
@@ -25,20 +17,23 @@
 
                         <div class="d-flex gap-5 mb-5 justify-content-between">
                             
+                            <input name="txtIdExp" type="text" hidden value="{{ex[0]}}" >
+
                             <div class="w-50">
                                 <div class="input-group">
-                                    <input type="text" class="form-control col-5" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Nombre del Paciente">
+                                    <input name="txtNombre" type="text" class="form-control col-5" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" 
+                                    placeholder="Nombre del Paciente" value="{{ex[1]}}">
                                 </div>
                                 
                                 <div class="d-flex mt-5 justify-content-between gap-3">    
                                     <div class="input-group ">
-                                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Fecha de Nacimiento" onfocus="(this.type='date')" onblur="(this.type='text')" id="date">
+                                        <input name="txtFechaN" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Fecha de Nacimiento" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" value="{{ex[2]}}">
                                     </div>
                                 </div>
                             </div>
                             
                             <div class="form-floating w-50">
-                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px"></textarea>
+                                <textarea name="txtAlergias" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px">{{ex[4]}}</textarea>
                                 <label for="floatingTextarea2">Alergias</label>
                             </div>
                             
@@ -47,27 +42,64 @@
                         <div class="d-flex gap-5 mb-5 justify-content-between">
                             
                             <div class="form-floating w-50">
-                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px"></textarea>
+                                <textarea name="txtEnf" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px">{{ex[5]}}</textarea>
                                 <label for="floatingTextarea2">Enfermedades Crónicas</label>
                             </div>
 
                             <div class="form-floating w-50">
-                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px"></textarea>
+                                <textarea name="txtAnt" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px" >{{ex[3]}}</textarea>
                                 <label for="floatingTextarea2">Antecedentes Familiares</label>
                             </div>
                             
                         </div>
 
                         <div class="flex-column text-center">
-                            <button class="btn text-white col-3" style="background-color: rgb(102, 174, 84);">Finalizar</button>
+                            <button type="submit" class="btn text-white col-3" style="background-color: rgb(7, 97, 149);">Finalizar</button>
                             <button type="button" class="btn btn-danger text-white col-3 ms-5" data-bs-dismiss="modal">Cancelar</button>
                         </div>
                         
                     </div>
                 </form>
-                
-            
             </div>
         </div>
     </div>
-{% endblock %}
+    
+
+
+    
+<!-- Modal Eliminar Usuario -->
+<div class="modal fade" id="EliminarExpediente{{ex[0]}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered ">
+        <div class="modal-content border-dark border-top-0 border-2">
+
+            <form action="/eliminarExpediente" method="POST">
+
+                <input name="txtIdExp" type="text" value="{{ex[0]}}" hidden>
+
+                <div class="" style="background-color: rgb(60, 141, 188); height:1vh;  border-radius:1vh 1vh 0vh 0vh"></div>
+
+                <div class="modal-header justify-content-center border-dark border-top-0 border-2">
+                    <h1 style="font-family: inria sans;" class="modal-title fs-5" id="staticBackdropLabel">Eliminar Usuario</h1>
+                </div>
+                <div class="modal-body border-dark border-top-0 border-2">
+                    
+                    <div class="flex-column text-center my-4 gap-3">
+                        <span>
+                            Se eliminará el usuario {{ex[1]}}
+                            <br>
+                            ¿Está seguro?
+                        </span>
+                    </div>
+                    
+
+                    <div class="flex-column text-center mb-3">
+                        <button type="submit" class="btn btn-danger text-white mx-3">Eliminar</button>
+                        <button type="button" class="btn text-white mx-3" style="background-color: rgb(102, 174, 84);" data-bs-dismiss="modal">Cancelar</button>
+                    </div>
+                    
+                </div>
+            </form>
+            
+        </div>
+    </div>
+</div>
